--- a/todo.html
+++ b/todo.html
@@ -10,6 +10,7 @@
     <h1>TodoList</h1>
     <p>Работа выполнена Санчес-Перес Сергеем Евгеньевичем</p>
     <a href="https://sanches-peres.netlify.app/portfolio">Ссылка на резюме-портфолио</a>
+    <a href="https://github.com/sergey-sanches-peres/rosatom-todolist-js-task">GitHub</a>
     <div class="options">
         <button class="bordered__btn" id="even" onclick="showEven()">Показать четные</button>
         <button class="bordered__btn" id="odd" onclick="showOdd()">Показать нечетные</button>
